// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render properly 1`] = `
.emotion-3 {
  box-shadow: 0px 2px 12px rgba(0,0,0,0.2);
  background: #ffffff;
  border-radius: 8px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 43px;
  margin-top: 36px;
}

.emotion-0 {
  font-weight: 300;
  font-size: 36px;
  line-height: 38px;
  color: #505256;
  margin-bottom: 12px;
  margin-top: 0px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: normal;
  color: #505256;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-2 {
  padding: 25px;
  margin: 0;
}

<div>
  <div
    class="emotion-3"
  >
    <h1
      class="emotion-0"
    />
    <h2
      class="emotion-1"
    />
    <div
      class="emotion-2"
    />
  </div>
</div>
`;

exports[`<Card /> should render properly with children 1`] = `
.emotion-3 {
  box-shadow: 0px 2px 12px rgba(0,0,0,0.2);
  background: #ffffff;
  border-radius: 8px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 43px;
  margin-top: 36px;
}

.emotion-0 {
  font-weight: 300;
  font-size: 36px;
  line-height: 38px;
  color: #505256;
  margin-bottom: 12px;
  margin-top: 0px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: normal;
  color: #505256;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-2 {
  padding: 25px;
  margin: 0;
}

<div>
  <div
    class="emotion-3"
  >
    <h1
      class="emotion-0"
    />
    <h2
      class="emotion-1"
    />
    <div
      class="emotion-2"
    >
      <div>
        Children
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> should render properly with title and subtitle 1`] = `
.emotion-3 {
  box-shadow: 0px 2px 12px rgba(0,0,0,0.2);
  background: #ffffff;
  border-radius: 8px;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 43px;
  margin-top: 36px;
}

.emotion-0 {
  font-weight: 300;
  font-size: 36px;
  line-height: 38px;
  color: #505256;
  margin-bottom: 12px;
  margin-top: 0px;
}

.emotion-1 {
  font-size: 14px;
  line-height: 20px;
  font-weight: normal;
  color: #505256;
  margin-top: 0;
  margin-bottom: 0;
}

.emotion-2 {
  padding: 25px;
  margin: 0;
}

<div>
  <div
    class="emotion-3"
  >
    <h1
      class="emotion-0"
    >
      Title
    </h1>
    <h2
      class="emotion-1"
    >
      Subtitle
    </h2>
    <div
      class="emotion-2"
    />
  </div>
</div>
`;
